--- a/financial/departmentbudget/templates/departmentbudget/edit.html
+++ b/financial/departmentbudget/templates/departmentbudget/edit.html
@@ -1,5 +1,5 @@
 {% extends 'base-form.html' %}
-{% block page-title %} Product Group {% endblock page-title %}
+{% block page-title %} Department Budget {% endblock page-title %}
 {% block page-content %}
 <div class="panel">
     <div class="panel-body container-fluid">
