--- a/financial/outputvat/templates/outputvat/edit.html
+++ b/financial/outputvat/templates/outputvat/edit.html
@@ -7,7 +7,7 @@
             <div class="panel margin-bottom-20">
                 <!-- Start Simple Form Validation -->
                 <div class="panel-heading">
-                    <h3 class="panel-title">Update</h3>
+                    <h3 class="panel-title">Edit</h3>
                 </div>
                 <div class="panel-body">
                     <form autocomplete="off" id="form-b" method="post">
